--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "git:commits": "node lib/git-manager.js commits 10",
     "git:stats": "node lib/git-manager.js stats 5",
     "prepublishOnly": "npm run validate:mcp && npm run test",
-    "postinstall": "node -e \"console.log('\\n🎉 AI Changelog Generator installed!\\n\\n⚡ Quick Start:\\n  ai-changelog                 - Generate changelog\\n  ai-changelog --detailed      - Detailed analysis\\n  ai-changelog --interactive   - Interactive mode\\n  ai-changelog-mcp            - Start MCP server\\n\\n🤖 AI Models Supported:\\n  • GPT-4.1 series (1M context, 75% cost reduction)\\n  • o3/o4 reasoning models (Azure-only)\\n  • Automatic model selection\\n\\n📖 Docs: https://github.com/idominikosgr/AI-github-changelog-generator-cli-mcp\\n\\n© All trademarks belong to their respective owners.\\n')\""
+    "postinstall": "node -e \"console.log('\\n🎉 AI Changelog Generator installed!\\n\\n⚡ Quick Start:\\n  ai-changelog                 - Generate changelog\\n  ai-changelog --detailed      - Detailed analysis\\n  ai-changelog --interactive   - Interactive mode\\n  ai-changelog-mcp            - Start MCP server\\n\\n🤖 AI Models Supported:\\n  • GPT-4.1 series (1M context, 75% cost reduction)\\n  • o3/o4 reasoning models (Azure-only)\\n  • Automatic model selection\\n\\n📖 Docs: https://github.com/entro314-labs/AI-github-changelog-generator-cli-mcp\\n\\n© All trademarks belong to their respective owners.\\n')\""
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.15.1",
@@ -90,17 +90,17 @@
     "ci-cd"
   ],
   "author": {
-    "name": "idominikosgr",
-    "url": "https://github.com/idominikosgr"
+    "name": "entro314-labs",
+    "url": "https://github.com/entro314-labs"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/idominikosgr/AI-github-changelog-generator-cli-mcp.git"
+    "url": "git+https://github.com/entro314-labs/AI-github-changelog-generator-cli-mcp.git"
   },
   "bugs": {
-    "url": "https://github.com/idominikosgr/AI-github-changelog-generator-cli-mcp/issues"
+    "url": "https://github.com/entro314-labs/AI-github-changelog-generator-cli-mcp/issues"
   },
-  "homepage": "https://github.com/idominikosgr/AI-github-changelog-generator-cli-mcp#readme",
+  "homepage": "https://github.com/entro314-labs/AI-github-changelog-generator-cli-mcp#readme",
   "license": "MIT",
   "engines": {
     "node": ">=22.0.0"
@@ -110,7 +110,7 @@
   },
   "funding": {
     "type": "github",
-    "url": "https://github.com/sponsors/idominikosgr"
+    "url": "https://github.com/sponsors/entro314-labs"
   },
   "config": {
     "commitizen": {
